<resources>
    <string name="app_name">PoEGO</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tip1">During your journey in Path of exile you will encounter many items
        and as a beginner you will not know which ones are valuable and which not
        ,for that i recommend first of all getting an item Filter which you could find on www.filterblade.xyz </string>
    <string name="tip2">Prioritize on leveling at the start and dont give so much importance to what you find, you will later on
    realize the value they hold</string>
    <string name="tip3">League mechanics are important and a core way to make currency in path of exile,
    I suggest you learning them as soon as they appear in acts. At the beginning you may find them confusing,
    but as you progress and start to understand them they increase exponentially in fun.</string>
    <string name="tip4">As you start to understand mechanics you will have exponentially more fun as
    many things in Path of Exile are linked.</string>
    <string name="tip5">Uniques are a type of items that come out every league as special items with different
    mods. Many of them are not that valuable but they come in handy for beginners that don\'t understand crafting yet.
    In the lategame and as you understand this game, you would have to replace many of non-core uniques in your build for
    metacrafted items with conqueror mods, as they are the strongest.</string>
    <string name="tip6">The first time you download this game you wont have the knowledge to start your own build
    and you will have to copy any build you find on the internet or any sources. This helps you reach the midgame and
    reach the point where you learn core league and game mechanics.</string>
    <string name="tip7">It is important that you try and understand as soon as posible what makes the build you
    copied as strong as it is, as it will help you understand the meta ways of building a build. And eventually giving you
    the knowledge to craft your own build. For theorycrafting builds, the best way known by the community is the
    Path of Building Community Fork tool. Can be found googling it.</string>
    <string name="tip8">As you journey through the acts and you reach act3 you will encounter the Labyrinth. These dungeon
    is both kinda difficult and dangerous as its full of traps and if you die you will have to restart it from the beginning.
    But this dungeon holds great power to those who are capable of overcome it. So have fun trying to conquer it and listening to
    the wise messages Izaro(The final boss) gives you through the dungeon.</string>

    <string name="vendor_recipe1">6 SOCKETS</string>
    <string name="vendor_recipe2">6 LINKED SOCKETS</string>
    <string name="vendor_recipe3">level 20 gem + gemcutter prism = 20% quality gem</string>
    <string name="vendor_recipe4">RGB SOCKET ITEM = chromatic orb</string>
    <string name="vendor_recipe5">1 gem 20% or many gems 40% = gemcutter prism</string>
    <string name="vendor_recipe6">Magic/Rare boots with MS + orb of augmentation + quicksilver flask = Boots with 10% MS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>