<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbrown"
    tools:context=".VendorRecipes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:id="@+id/vendor_recipe_text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/vendor_recipe1"
            android:textColor="@color/brightyellow"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/sockets6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:gravity="center"
            android:id="@+id/vendor_recipe_text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/vendor_recipe2"
            android:textColor="@color/brightyellow"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/socketsLinked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:gravity="center"
            android:id="@+id/vendor_recipe_text3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/vendor_recipe3"
            android:textColor="@color/brightyellow"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/gemcutter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:gravity="center"
            android:id="@+id/vendor_recipe_text4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/vendor_recipe4"
            android:textColor="@color/brightyellow"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/chromatic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:gravity="center"
            android:id="@+id/vendor_recipe_text5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/vendor_recipe5"
            android:textColor="@color/brightyellow"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/level20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:gravity="center"
            android:id="@+id/vendor_recipe_text6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/vendor_recipe6"
            android:textColor="@color/brightyellow"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/magicBoots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>